--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	<head>
+		<title>AirBnB Clone</title>
+	</head>
 	<body>
 		<header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
 		<footer style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; position: absolute; bottom: 0px; line-height: 70px">Best School</footer>
